pgrx-tests/tests/ui/total_ord_for_postgres_ord.stderr
error[E0277]: the trait bound `BrokenType: std::cmp::Ord` is not satisfied
 --> tests/ui/total_ord_for_postgres_ord.rs:5:84
  |
5 | #[derive(Copy, Clone, Serialize, Deserialize, PartialEq, PartialOrd, PostgresType, PostgresOrd)]
  |                                                                                    ^^^^^^^^^^^ the trait `std::cmp::Ord` is not implemented for `BrokenType`
  |
  = note: this error originates in the derive macro `PostgresOrd` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `BrokenType` with `#[derive(Ord)]`
  |
6 + #[derive(Ord)]
7 | pub struct BrokenType {
  |
